// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PGPM Migration Error Messages Constraint Violation in Migration snapshot: constraint violation in migration: error fields 1`] = `
{
  "code": "23505",
  "constraint": "test_snapshot_products_sku_key",
  "detail": "Key (sku)=(PROD-001) already exists.",
  "hint": undefined,
  "internalQuery": undefined,
  "position": undefined,
  "schema": "public",
  "table": "test_snapshot_products",
  "where": "SQL statement "
INSERT INTO test_snapshot_products (sku) VALUES ('PROD-001');
      "
PL/pgSQL function pgpm_migrate.deploy(text,text,text,text[],text,boolean) line 46 at EXECUTE",
}
`;

exports[`PGPM Migration Error Messages Constraint Violation in Migration snapshot: constraint violation in migration: error message 1`] = `"duplicate key value violates unique constraint "test_snapshot_products_sku_key""`;

exports[`PGPM Migration Error Messages JSON Type Mismatch in Migration snapshot: JSON type mismatch error in migration: error fields 1`] = `
{
  "code": "22P02",
  "constraint": undefined,
  "detail": "Token "not_valid_json" is invalid.",
  "hint": undefined,
  "internalQuery": "
INSERT INTO test_migration_config (name, settings) VALUES ('test', 'not_valid_json');
      ",
  "position": undefined,
  "schema": undefined,
  "table": undefined,
  "where": "JSON data, line 1: not_valid_json
PL/pgSQL function pgpm_migrate.deploy(text,text,text,text[],text,boolean) line 46 at EXECUTE",
}
`;

exports[`PGPM Migration Error Messages JSON Type Mismatch in Migration snapshot: JSON type mismatch error in migration: error message 1`] = `"invalid input syntax for type json"`;

exports[`PGPM Migration Error Messages Nested EXECUTE Migration Errors snapshot: nested EXECUTE migration error: error fields 1`] = `
{
  "code": "42P01",
  "constraint": undefined,
  "detail": undefined,
  "hint": undefined,
  "internalQuery": "INSERT INTO nonexistent_migration_table_xyz (col) VALUES (1)",
  "position": undefined,
  "schema": undefined,
  "table": undefined,
  "where": "PL/pgSQL function inline_code_block line 3 at EXECUTE
SQL statement "
DO $$
BEGIN
  EXECUTE 'INSERT INTO nonexistent_migration_table_xyz (col) VALUES (1)';
END;
$$;
      "
PL/pgSQL function pgpm_migrate.deploy(text,text,text,text[],text,boolean) line 46 at EXECUTE",
}
`;

exports[`PGPM Migration Error Messages Nested EXECUTE Migration Errors snapshot: nested EXECUTE migration error: error message 1`] = `"relation "nonexistent_migration_table_xyz" does not exist"`;
